tests/samples/invalid/i32_too_big.pn
fn main() -> i32
{
	return: 21387129873219873193219873179318319281731238719273123817239817i32
}
